--- a/Assignement1.ipynb
+++ b/Assignement1.ipynb
@@ -42,7 +42,7 @@
         "from keras.datasets import fashion_mnist\r\n",
         "from matplotlib import pyplot"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -112,7 +112,7 @@
       "source": [
         "(trainX, trainy), (testX, testy) = fashion_mnist.load_data()"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -142,7 +142,7 @@
       "source": [
         "np.unique(trainy)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -170,7 +170,7 @@
       "source": [
         "trainy.T.shape"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -199,7 +199,7 @@
       "source": [
         "np.exp(700)[0]"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -218,11 +218,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "Jriaq5o4GmyT",
-        "outputId": "dcb74018-0fe2-447b-b55d-80f31d425942",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 130
-        }
+        },
+        "outputId": "dcb74018-0fe2-447b-b55d-80f31d425942"
       },
       "source": [
         "\r\n",
@@ -288,7 +288,7 @@
         "    return [a,h,output_function(a[len(a)-1])]\r\n",
         "    "
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -330,7 +330,7 @@
         "      e[i]=1\r\n",
         "  return -(e-y)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -371,7 +371,7 @@
         "    \r\n",
         "\r\n"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -391,18 +391,13 @@
         "\r\n",
         "   return l"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "WP-FV-Ijsclo",
-        "outputId": "d55068f9-aabb-4049-e9a2-904bda1ae4f5",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 130
-        }
+        "id": "WP-FV-Ijsclo"
       },
       "source": [
         "def sgd(X,Y,num_epochs,weight_decay,learning_rate,batch_size,weights,biases,activation_function,act_fn_derivative):\r\n",
@@ -428,19 +423,10 @@
         "                cum_B = []\r\n",
         "                cnt = 0\r\n",
         "      \r\n",
-        "      return [weights,biases]"
+        "     return [weights,biases]"
       ],
-      "execution_count": 10,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "IndentationError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-10-4a2c01f58f55>\"\u001b[0;36m, line \u001b[0;32m24\u001b[0m\n\u001b[0;31m    return [weights,biases]\u001b[0m\n\u001b[0m                           ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unindent does not match any outer indentation level\n"
-          ]
-        }
-      ]
+      "execution_count": 3,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -503,7 +489,7 @@
         "      return nadam(X,Y,num_epochs,weight_decay,learning_rate,batch_size,weights,biases,activation_function,act_fn_derivative)\r\n",
         "  \r\n"
       ],
-      "execution_count": 12,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -512,7 +498,76 @@
         "id": "1gsjii9ICVT3"
       },
       "source": [
+        "def momentum(X,Y,num_epochs,weight_decay,learning_rate,batch_size,weights,biases,activation_function,gamma,act_fn_derivative):\r\n",
+        "  #w_ahead=w_{t} - gamma. update_{t-1}\r\n",
+        "  #update{t} = gamma . update_{t-1} + learning_rate * grad(w_lookahead)\r\n",
+        "\r\n",
+        "  #Initialisation of weights_grad_tot, biases_grad_tot\r\n",
+        "  weights_grad_tot=[]\r\n",
+        "  for w in weights:\r\n",
+        "    weights_grad_tot.append(np.zeroes(w.size()))\r\n",
+        "  biases_grad_tot=[]\r\n",
+        "  for b in biases:\r\n",
+        "    biases_grad_tot.append(np.zeroes(b.size()))\r\n",
+        "\r\n",
+        "  #Initialisation of update_weights\r\n",
+        "  update_weights=weights_grad_tot\r\n",
+        "  update_biases=biases_grad_tot\r\n",
+        "\r\n",
+        "  for i in range(num_epochs):\r\n",
+        "    num_hidden_layers=biases.size()[0] #Biases is a list of 1D arrays. Thus, the number of hidden layers is given by the size of this list\r\n",
+        "    Y_pred=feed_forward(X,activation_function,weights,biases) #Find prediction for each data instance of the data set\r\n",
+        "    num_data_point_done=0\r\n",
+        "    for x,y,y_pred in zip(X,Y,Y_pred):    \r\n",
+        "      [weights_grad,biases_grad] =  calculate_gradient(y,y_pred,h,a,weights,act_fn_derivative)\r\n",
+        "      weights_grad_tot = weights_grad_tot+weights_grad\r\n",
+        "      biases_grad_tot = biases_grad_tot + biases_grad      \r\n",
+        "      num_data_point_done=num_data_point_done+1\r\n",
+        "      if(num_data_point_done==batch_size):\r\n",
+        "        update_weights = update_weights + gamma*update_weights + learning_rate * weights_grad_tot\r\n",
+        "        update_biases = update_biases + gamma*update_weight + learning_rate * biases_grad_tot\r\n",
+        "        weights=weights-update_weights\r\n",
+        "        biases=biases - update_biases\r\n",
+        "        num_data_point_done=0\r\n",
+        "  \r\n",
         "def nesterov(X,Y,num_epochs,weight_decay,learning_rate,batch_size,weights,biases,activation_function,gamma,act_fn_derivative):\r\n",
+        "  #w_ahead=w_{t} - gamma. update_{t-1}\r\n",
+        "  #update{t} = gamma . update_{t-1} + learning_rate * grad(w_lookahead)\r\n",
+        "  \r\n",
+        "  #Initialisation of weights_grad_tot, biases_grad_tot\r\n",
+        "  weights_grad_tot=[]\r\n",
+        "  for w in weights:\r\n",
+        "    weights_grad_tot.append(np.zeroes(w.size()))\r\n",
+        "  biases_grad_tot=[]\r\n",
+        "  for b in biases:\r\n",
+        "    biases_grad_tot.append(np.zeroes(b.size()))\r\n",
+        "  #Initial value of w_head\r\n",
+        "  w_ahead = weights\r\n",
+        "\r\n",
+        "  #Initialisation of update_weights\r\n",
+        "  update_weights=weights_grad_tot\r\n",
+        "  update_biases=biases_grad_tot\r\n",
+        "\r\n",
+        "  for i in range(num_epochs):\r\n",
+        "    num_hidden_layers=biases.size()[0] #Biases is a list of 1D arrays. Thus, the number of hidden layers is given by the size of this list\r\n",
+        "    Y_pred=feed_forward(X,activation_function,weights,biases) #Find prediction for each data instance of the data set\r\n",
+        "    num_data_point_done=0\r\n",
+        "    for x,y,y_pred in zip(X,Y,Y_pred):          \r\n",
+        "      [weights_grad,biases_grad] =  calculate_gradient(y,y_pred,h,a,w_ahead,act_fn_derivative)\r\n",
+        "      weights_grad_tot = weights_grad_tot+weights_grad\r\n",
+        "      biases_grad_tot = biases_grad_tot + biases_grad             \r\n",
+        "      num_data_point_done=num_data_point_done+1\r\n",
+        "      if(num_data_point_done==batch_size):\r\n",
+        "        w_ahead = weights -  update_weights\r\n",
+        "        b_ahead = biases -  update_biases\r\n",
+        "        update_weights = update_weights + gamma*update_weights + learning_rate * weights_grad_tot\r\n",
+        "        update_biases = update_biases + gamma*update_weight + learning_rate * biases_grad_tot    \r\n",
+        "        weights=weights-update_weights\r\n",
+        "        biases=biases - update_biases\r\n",
+        "        num_data_point_done=0\r\n",
+        "\r\n",
+        "  \r\n",
+        "def adagrad(X,Y,num_epochs,weight_decay,learning_rate,batch_size,weights,biases,activation_function,gamma,act_fn_derivative):\r\n",
         "  #w_ahead=w_{t} - gamma. update_{t-1}\r\n",
         "  #update{t} = gamma . update_{t-1} + learning_rate * grad(w_lookahead)\r\n",
         "  # w_ahead= weights\r\n",
@@ -520,28 +575,69 @@
         "  for i in range(num_epochs):\r\n",
         "    num_hidden_layers=biases.size()[0] #Biases is a list of 1D arrays. Thus, the number of hidden layers is given by the size of this list\r\n",
         "    Y_pred=feed_forward(X,activation_function,weights,biases) #Find prediction for each data instance of the data set\r\n",
+        "    weights_grad_tot=[]\r\n",
+        "    for w in weights:\r\n",
+        "      weights_grad_tot.append(np.zeroes(w.size()))\r\n",
+        "    biases_grad_tot=[]\r\n",
+        "    for b in biases:\r\n",
+        "      biases_grad_tot.append(np.zeroes(b.size()))\r\n",
         "    num_data_point_done=0\r\n",
+        "    v_weight = 0 #Intitial value of 0\r\n",
+        "    v_bias=0\r\n",
+        "    epsilon = 0 #Figure out what is epsilon\r\n",
         "    for x,y,y_pred in zip(X,Y,Y_pred):    \r\n",
-        "      w_ahead = weights -  gamma * update_weights\r\n",
-        "      b_ahead = biases -  gamma * update_biases\r\n",
-        "      [weights_grad,biases_grad] =  calculate_gradient(y,y_pred,h,a,w_ahead,act_fn_derivative)\r\n",
-        "      update_weights = update_weights + gamma*update_weights + learning_rate * weights_grad\r\n",
-        "      update_biases = update_biases + gamma*update_weight + learning_rate * biases_grad    \r\n",
+        "      [weights_grad,biases_grad] =  calculate_gradient(y,y_pred,h,a,weights,act_fn_derivative)\r\n",
+        "      weights_grad_tot = weights_grad_tot+weights_grad\r\n",
+        "      biases_grad_tot = biases_grad_tot + biases_grad\r\n",
         "      num_data_point_done=num_data_point_done+1\r\n",
         "      if(num_data_point_done==batch_size):\r\n",
-        "        weights=weights-update_weights\r\n",
-        "        biases=biases - update_biases\r\n",
+        "        v_weight = v_weight + (weights_grad_total)**2\r\n",
+        "        v_bias = v_bias + (biases_grad_total)**2\r\n",
+        "        v_weight_dum = learning_rate/np.sqrt(v_weight+epsilon)\r\n",
+        "        v_bias_dum = learning_rate/np.sqrt(v_bias+epsilon)\r\n",
+        "        weights=weights- v_weight_dum * weights_grad_tot\r\n",
+        "        biases=biases - v_bias_dum * bias_grad_tot\r\n",
         "        num_data_point_done=0\r\n",
         "    \r\n",
-        "\r\n",
-        "  \r\n",
+        "def rmsprop(X,Y,num_epochs,weight_decay,learning_rate,batch_size,weights,biases,activation_function,gamma,act_fn_derivative):\r\n",
+        "  #w_ahead=w_{t} - gamma. update_{t-1}\r\n",
+        "  #update{t} = gamma . update_{t-1} + learning_rate * grad(w_lookahead)\r\n",
+        "  # w_ahead= weights\r\n",
+        "  # b_ahead=biases\r\n",
+        "  for i in range(num_epochs):\r\n",
+        "    num_hidden_layers=biases.size()[0] #Biases is a list of 1D arrays. Thus, the number of hidden layers is given by the size of this list\r\n",
+        "    Y_pred=feed_forward(X,activation_function,weights,biases) #Find prediction for each data instance of the data set\r\n",
+        "    weights_grad_tot=[]\r\n",
+        "    for w in weights:\r\n",
+        "      weights_grad_tot.append(np.zeroes(w.size()))\r\n",
+        "    biases_grad_tot=[]\r\n",
+        "    for b in biases:\r\n",
+        "      biases_grad_tot.append(np.zeroes(b.size()))\r\n",
+        "    num_data_point_done=0\r\n",
+        "    v_weight = 0 #Intitial value of 0\r\n",
+        "    v_bias=0\r\n",
+        "    epsilon = 0 #Figure out what is epsilon\r\n",
+        "    beta=0\r\n",
+        "    for x,y,y_pred in zip(X,Y,Y_pred):    \r\n",
+        "      [weights_grad,biases_grad] =  calculate_gradient(y,y_pred,h,a,weights,act_fn_derivative)\r\n",
+        "      weights_grad_tot = weights_grad_tot+weights_grad\r\n",
+        "      biases_grad_tot = biases_grad_tot + biases_grad\r\n",
+        "      num_data_point_done=num_data_point_done+1\r\n",
+        "      if(num_data_point_done==batch_size):\r\n",
+        "        v_weight = beta*v_weight + (1-beta)*(weights_grad_total)**2\r\n",
+        "        v_bias = beta*v_bias + (1-beta)*(biases_grad_total)**2\r\n",
+        "        v_weight_dum = learning_rate/np.sqrt(v_weight+epsilon)\r\n",
+        "        v_bias_dum = learning_rate/np.sqrt(v_bias+epsilon)\r\n",
+        "        weights=weights- v_weight_dum * weights_grad_tot\r\n",
+        "        biases=biases - v_bias_dum * bias_grad_tot\r\n",
+        "        num_data_point_done=0\r\n",
         "      \r\n",
         "      \r\n",
         "  \r\n",
         "\r\n",
         "\r\n"
       ],
-      "execution_count": 14,
+      "execution_count": 2,
       "outputs": []
     },
     {
