--- a/Assignement1_Final_Sweep.ipynb
+++ b/Assignement1_Final_Sweep.ipynb
@@ -296,7 +296,7 @@
         "from sklearn.model_selection import train_test_split\r\n",
         "import seaborn as sns #To plot confusion matrix as a heatmap"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -374,7 +374,7 @@
         "testX = testX/255\r\n",
         "validateX = validateX/255"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -407,7 +407,7 @@
         "!wandb login \r\n",
         "wandb.init(project=\"cs6910-assignment1\", entity=\"nvvishnu\")"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -496,7 +496,7 @@
         "\r\n",
         "#Log sample images of each class to wandb\r\n"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -647,7 +647,7 @@
         "\r\n",
         "   return l"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -682,7 +682,7 @@
         "        h.append(activation_function(a[len(a)-1]))\r\n",
         "    return [a,h,output_function(a[len(a)-1])]    "
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -730,18 +730,13 @@
         "    \r\n",
         "\r\n"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "WP-FV-Ijsclo",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 130
-        },
-        "outputId": "f61da6d8-0875-4772-b9ee-1acd6dc82b80"
+        "id": "WP-FV-Ijsclo"
       },
       "source": [
         "#This cell contains the definition of different optimizers\r\n",
@@ -938,7 +933,7 @@
         "    return [weights,biases]\r\n",
         " \r\n",
         " #momentum optimizer\r\n",
-        " def momentum(X,Y,num_epochs,weight_decay,learning_rate,batch_size,weights,biases,activation_function,act_fn_derivative):\r\n",
+        "def momentum(X,Y,num_epochs,weight_decay,learning_rate,batch_size,weights,biases,activation_function,act_fn_derivative):\r\n",
         "  #update{t} = gamma . update_{t-1} + learning_rate * grad(weight)\r\n",
         "  #weigt{t}=weight{t-1}-update{t}\r\n",
         "\r\n",
@@ -1123,17 +1118,8 @@
         "        biases_grad_tot = [np.zeros(biases[i].shape) if(i != 0) else 0 for i in range(len(biases))]\r\n",
         "  return [weights,biases]        \r\n"
       ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "IndentationError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-c44ec1b5e871>\"\u001b[0;36m, line \u001b[0;32m195\u001b[0m\n\u001b[0;31m    def momentum(X,Y,num_epochs,weight_decay,learning_rate,batch_size,weights,biases,activation_function,act_fn_derivative):\u001b[0m\n\u001b[0m                                                                                                                            ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unindent does not match any outer indentation level\n"
-          ]
-        }
-      ]
+      "execution_count": 10,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1222,7 +1208,7 @@
         "    return [weights,biases]\r\n",
         "\r\n"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -1295,6 +1281,86 @@
         "# weight_initialisation = [ 'random', 'Xavier']\r\n",
         "# num_hidden_layer = [3,4,5]\r\n",
         "# size_layer = [32,64,128]"
+      ],
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Wm3cWwRej3BB"
+      },
+      "source": [
+        "# sweep_config = {\r\n",
+        "#     'name': 'max_accuracy_1.2',\r\n",
+        "#     'method' : 'random',\r\n",
+        "#     'metric': {        \r\n",
+        "#          'goal': 'maximize',\r\n",
+        "#          'name' : 'val_accuracy'\r\n",
+        "#     },\r\n",
+        "#     'parameters': {\r\n",
+        "#         'epochs':{\r\n",
+        "#             'values': [10]\r\n",
+        "#         },\r\n",
+        "#         'batch_size':{\r\n",
+        "#             'values': [64]\r\n",
+        "#         },\r\n",
+        "#         'weight_decay':{\r\n",
+        "#             'values': [0.0005]\r\n",
+        "#         },\r\n",
+        "#         'learning_rate':{\r\n",
+        "#             'values': [0.001]\r\n",
+        "#         },\r\n",
+        "#         'optimizer':{\r\n",
+        "#             'values': ['adam','nadam','rmsprop']\r\n",
+        "#         },\r\n",
+        "#         'activation':{\r\n",
+        "#             'values': ['sigmoid']\r\n",
+        "#         },\r\n",
+        "#         'weight_intialisation':{\r\n",
+        "#             'values': ['random','Xavier']\r\n",
+        "#         },\r\n",
+        "#         'num_hidden_layer': {\r\n",
+        "#             'values': [3]\r\n",
+        "#         },\r\n",
+        "#         'size_layer':{\r\n",
+        "#             'values': [64]\r\n",
+        "#         },\r\n",
+        "#         'loss_function':{\r\n",
+        "#             'values':['squared_error_loss','cross_entropy']\r\n",
+        "#         }\r\n",
+        "\r\n",
+        "#     }\r\n",
+        "# }\r\n",
+        "\r\n",
+        "# def train():\r\n",
+        "#   config_default = {\r\n",
+        "#         'epochs': 10,\r\n",
+        "#         'batch_size': 64,\r\n",
+        "#         'weight_decay':0.0005, \r\n",
+        "#         'learning_rate':0.001,\r\n",
+        "#         'optimizer': 'adam',\r\n",
+        "#         'activation': 'sigmoid', \r\n",
+        "#         'weight_intialisation':'random', \r\n",
+        "#         'num_hidden_layer': 3,\r\n",
+        "#         'size_layer': 64,\r\n",
+        "#         'loss_function': 'squared_error_loss'\r\n",
+        "#   }\r\n",
+        "\r\n",
+        "#   print(\"wand about to be initialised\")\r\n",
+        "#   #config=wandb.config\r\n",
+        "#   #name = 'epochs_'+str(config.epochs)+'_btch_sz_'+str(config.batch_size)+'_wght_dcy_'+str(config.weight_decay)+'_optm_'+config.optimizer+'_lrng_rat_'+config.learning_rate+'_actvn_'+config.activation+'_numhdnlyr_'+str(config.num_hidden_layer)+' sz_lyr_'+str(config.size_layer)\r\n",
+        "#   wandb.init(config=config_default,project='cs6910-assignment1')\r\n",
+        "#   config = wandb.config\r\n",
+        "#   a = trainX\r\n",
+        "#   b = trainy\r\n",
+        "  \r\n",
+        "#   backpropagation(trainX,trainy,config.epochs,config.num_hidden_layer,config.size_layer,config.learning_rate,config.optimizer,config.batch_size,config.weight_intialisation,config.activation,config.weight_decay,validateX,validatey,config.loss_function) \r\n",
+        "\r\n",
+        "# # backpropagation(trainX,trainy,10,3,64,1e-3,'adam',64,'random','sigmoid',0.0005,validateX,validatey,'squared_error_loss')\r\n",
+        "# # backpropagation(trainX,trainy,10,3,64,1e-3,'adam',64,'random','sigmoid',0.0005,validateX,validatey)\r\n",
+        "# sweep_id = wandb.sweep(sweep_config,entity=\"nvvishnu\",project=\"cs6910-assignment1\")\r\n",
+        "# wandb.agent(sweep_id,project=\"cs6910-assignment1\",function=train)"
       ],
       "execution_count": null,
       "outputs": []
