--- a/Assignement1_Final_Sweep.ipynb
+++ b/Assignement1_Final_Sweep.ipynb
@@ -647,7 +647,7 @@
         "\r\n",
         "   return l"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -682,7 +682,7 @@
         "        h.append(activation_function(a[len(a)-1]))\r\n",
         "    return [a,h,output_function(a[len(a)-1])]    "
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -730,7 +730,7 @@
         "    \r\n",
         "\r\n"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1118,7 +1118,7 @@
         "        biases_grad_tot = [np.zeros(biases[i].shape) if(i != 0) else 0 for i in range(len(biases))]\r\n",
         "  return [weights,biases]        \r\n"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1208,7 +1208,7 @@
         "    return [weights,biases]\r\n",
         "\r\n"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1282,7 +1282,7 @@
         "# num_hidden_layer = [3,4,5]\r\n",
         "# size_layer = [32,64,128]"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1381,37 +1381,37 @@
         "    },\r\n",
         "    'parameters': {\r\n",
         "        'epochs':{\r\n",
-        "            'values': [10]\r\n",
+        "            'values': [5,10]\r\n",
         "        },\r\n",
         "        'batch_size':{\r\n",
-        "            'values': [64]\r\n",
+        "            'values': [32,64]\r\n",
         "        },\r\n",
         "        'weight_decay':{\r\n",
-        "            'values': [0.0005]\r\n",
+        "            'values': [0,0.0005]\r\n",
         "        },\r\n",
         "        'learning_rate':{\r\n",
-        "            'values': [0.001]\r\n",
+        "            'values': [1e-2,1e-3]\r\n",
         "        },\r\n",
         "        'optimizer':{\r\n",
-        "            'values': ['adam']\r\n",
+        "            'values': ['sgd','adam','nadam','nesterov','rmsprop','momentum']\r\n",
         "        },\r\n",
         "        'activation':{\r\n",
-        "            'values': ['sigmoid']\r\n",
+        "            'values': ['sigmoid','tanh','ReLU']\r\n",
         "        },\r\n",
         "        'weight_intialisation':{\r\n",
-        "            'values': ['random']\r\n",
+        "            'values': ['random','Xavier']\r\n",
         "        },\r\n",
         "        'num_hidden_layer': {\r\n",
-        "            'values': [5]\r\n",
+        "            'values': [5,3]\r\n",
         "        },\r\n",
         "        'size_layer':{\r\n",
-        "            'values': [128]\r\n",
+        "            'values': [32,64,128]\r\n",
         "        }\r\n",
         "\r\n",
         "    }\r\n",
         "}"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
