--- a/Assignement1_Final_Sweep.ipynb
+++ b/Assignement1_Final_Sweep.ipynb
@@ -1291,6 +1291,7 @@
         "id": "Wm3cWwRej3BB"
       },
       "source": [
+        "#This cell contains code for making plots for squared error loss and cross entropy loss\r\n",
         "# sweep_config = {\r\n",
         "#     'name': 'max_accuracy_1.2',\r\n",
         "#     'method' : 'random',\r\n",
@@ -1368,6 +1369,117 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "Dwy-h9iO49lj"
+      },
+      "source": [
+        "# This cell has code for 10th question We ran 3 sweeps and plotted those curves \r\n",
+        "# #  epochs\t10\r\n",
+        "# # batch_size\t64\r\n",
+        "# # weight_decay\t0.0005\r\n",
+        "# # learning_rate\t0.001\r\n",
+        "# # optimizer\tadam\r\n",
+        "# # activation\tsigmoid\r\n",
+        "# # weight_intialisation\trandom\r\n",
+        "# # num_hidden_layer\t3\r\n",
+        "# # size_layer\t64\r\n",
+        "# # val_accuracy\t0.866\r\n",
+        "# # backpropagation(X,Y,num_epochs,num_hidden_layers,sz_hidden_layer,learning_rate,optimizer,batch_size,weight_initialisation,activation,weight_decay,validateX,validatey)\r\n",
+        "# # 64\r\n",
+        "# # 10\r\n",
+        "# # 0.001\r\n",
+        "# # cross_entropy\r\n",
+        "# # 3\r\n",
+        "# # rmsprop\r\n",
+        "# # 64\r\n",
+        "# # 0.0005\r\n",
+        "# # Xavier\r\n",
+        "# # sigmoid\r\n",
+        "# # 32\r\n",
+        "# # 10\r\n",
+        "# # 0.01\r\n",
+        "# # -\r\n",
+        "# # 3\r\n",
+        "# # momentum\r\n",
+        "# # 64\r\n",
+        "# # 0\r\n",
+        "# # random\r\n",
+        "\r\n",
+        "\r\n",
+        "# sweep_config = {\r\n",
+        "#     'name': 'max_accuracy_1.2',\r\n",
+        "#     'method' : 'random',\r\n",
+        "#     'metric': {        \r\n",
+        "#          'goal': 'maximize',\r\n",
+        "#          'name' : 'val_accuracy'\r\n",
+        "#     },\r\n",
+        "#     'parameters': {\r\n",
+        "#         'epochs':{\r\n",
+        "#             'values': [10]\r\n",
+        "#         },\r\n",
+        "#         'batch_size':{\r\n",
+        "#             'values': [32]\r\n",
+        "#         },\r\n",
+        "#         'weight_decay':{\r\n",
+        "#             'values': [0]\r\n",
+        "#         },\r\n",
+        "#         'learning_rate':{\r\n",
+        "#             'values': [0.01]\r\n",
+        "#         },\r\n",
+        "#         'optimizer':{\r\n",
+        "#             'values': ['momentum']\r\n",
+        "#         },\r\n",
+        "#         'activation':{\r\n",
+        "#             'values': ['sigmoid']\r\n",
+        "#         },\r\n",
+        "#         'weight_intialisation':{\r\n",
+        "#             'values': ['random']\r\n",
+        "#         },\r\n",
+        "#         'num_hidden_layer': {\r\n",
+        "#             'values': [3]\r\n",
+        "#         },\r\n",
+        "#         'size_layer':{\r\n",
+        "#             'values': [64]\r\n",
+        "#         },\r\n",
+        "#         'loss_function':{\r\n",
+        "#             'values':['cross_entropy']\r\n",
+        "#         }\r\n",
+        "\r\n",
+        "#     }\r\n",
+        "# }\r\n",
+        "\r\n",
+        "# def train():\r\n",
+        "#   config_default = {\r\n",
+        "#         'epochs': 10,\r\n",
+        "#         'batch_size': 64,\r\n",
+        "#         'weight_decay':0.0005, \r\n",
+        "#         'learning_rate':0.001,\r\n",
+        "#         'optimizer': 'adam',\r\n",
+        "#         'activation': 'sigmoid', \r\n",
+        "#         'weight_intialisation':'random', \r\n",
+        "#         'num_hidden_layer': 3,\r\n",
+        "#         'size_layer': 64,\r\n",
+        "#         'loss_function': 'squared_error_loss'\r\n",
+        "#   }\r\n",
+        "\r\n",
+        "#   print(\"wand about to be initialised\")\r\n",
+        "#   #config=wandb.config\r\n",
+        "#   #name = 'epochs_'+str(config.epochs)+'_btch_sz_'+str(config.batch_size)+'_wght_dcy_'+str(config.weight_decay)+'_optm_'+config.optimizer+'_lrng_rat_'+config.learning_rate+'_actvn_'+config.activation+'_numhdnlyr_'+str(config.num_hidden_layer)+' sz_lyr_'+str(config.size_layer)\r\n",
+        "#   wandb.init(config=config_default,project='cs6910-assignment1')\r\n",
+        "#   config = wandb.config\r\n",
+        "#   a = trainX\r\n",
+        "#   b = trainy\r\n",
+        "  \r\n",
+        "#   backpropagation(trainX,trainy,config.epochs,config.num_hidden_layer,config.size_layer,config.learning_rate,config.optimizer,config.batch_size,config.weight_intialisation,config.activation,config.weight_decay,validateX,validatey,config.loss_function) \r\n",
+        "\r\n",
+        "# # backpropagation(trainX,trainy,10,3,64,1e-3,'adam',64,'random','sigmoid',0.0005,validateX,validatey,'squared_error_loss')\r\n",
+        "# # backpropagation(trainX,trainy,10,3,64,1e-3,'adam',64,'random','sigmoid',0.0005,validateX,validatey)\r\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "dFuD9Bu7ojO5"
       },
       "source": [
@@ -1381,37 +1493,37 @@
         "    },\r\n",
         "    'parameters': {\r\n",
         "        'epochs':{\r\n",
-        "            'values': [5,10]\r\n",
+        "            'values': [10]\r\n",
         "        },\r\n",
         "        'batch_size':{\r\n",
-        "            'values': [32,64]\r\n",
+        "            'values': [64]\r\n",
         "        },\r\n",
         "        'weight_decay':{\r\n",
-        "            'values': [0,0.0005]\r\n",
+        "            'values': [0.0005]\r\n",
         "        },\r\n",
         "        'learning_rate':{\r\n",
-        "            'values': [1e-2,1e-3]\r\n",
+        "            'values': [0.001]\r\n",
         "        },\r\n",
         "        'optimizer':{\r\n",
-        "            'values': ['sgd','adam','nadam','nesterov','rmsprop','momentum']\r\n",
+        "            'values': ['adam']\r\n",
         "        },\r\n",
         "        'activation':{\r\n",
-        "            'values': ['sigmoid','tanh','ReLU']\r\n",
+        "            'values': ['sigmoid']\r\n",
         "        },\r\n",
         "        'weight_intialisation':{\r\n",
-        "            'values': ['random','Xavier']\r\n",
+        "            'values': ['random']\r\n",
         "        },\r\n",
         "        'num_hidden_layer': {\r\n",
-        "            'values': [5,3]\r\n",
+        "            'values': [5]\r\n",
         "        },\r\n",
         "        'size_layer':{\r\n",
-        "            'values': [32,64,128]\r\n",
+        "            'values': [128]\r\n",
         "        }\r\n",
         "\r\n",
         "    }\r\n",
         "}"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
