--- a/Assignment2/partA/Assignment2_partA_final.ipynb
+++ b/Assignment2/partA/Assignment2_partA_final.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "Assignment 2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMK+DU7njLPBV2ok8EIUrXg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,7 +41,7 @@
         "import wandb\n",
         "from wandb.keras import WandbCallback "
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -113,7 +112,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -141,7 +140,7 @@
         "# import splitfolders\n",
         "# splitfolders.ratio(path+'train', output=path+'split', seed=1337, ratio=(.9, .1), group_prefix=None) # default values"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -171,7 +170,7 @@
         "    model.add(layers.Dense(10,activation='softmax'))\n",
         "    return model"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -187,7 +186,7 @@
         "model = simplenetwork([32,32,32,32,32],[(3,3),(3,3),(3,3),(3,3),(3,3)],['relu' for i in range(6)],1024)\n",
         "model.summary()"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -304,7 +303,62 @@
         "\n",
         "     return model"
       ],
-      "execution_count": 9,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8b7XPA6O0cCc"
+      },
+      "source": [
+        "#a function for Image processing , this returns generators for the train and validation_data\n",
+        "#data_augmentation if True then we augment the training data\n",
+        "#batch_size is the batch size of data\n",
+        "def ImageProcessing(data_augmentation,batch_size):\n",
+        "    \n",
+        "      augmented = preprocessing.image.ImageDataGenerator(\n",
+        "                              #featurewise_center=True,\n",
+        "                              #featurewise_std_normalization=True,\n",
+        "                              rotation_range=20,\n",
+        "                              width_shift_range=0.2,\n",
+        "                              height_shift_range=0.2,\n",
+        "                              horizontal_flip=True)\n",
+        "      datagen = preprocessing.image.ImageDataGenerator()\n",
+        "      train = []\n",
+        "      validation = []\n",
+        "      if(data_augmentation):\n",
+        "          train = augmented.flow_from_directory(path+'split/train/',target_size=(224,224),color_mode='rgb', classes=None,class_mode='categorical', batch_size=batch_size)\n",
+        "      else:\n",
+        "          train = datagen.flow_from_directory(path+'split/train/',target_size=(224,224),color_mode='rgb', classes=None,class_mode='categorical', batch_size=batch_size)\n",
+        "      validation = datagen.flow_from_directory(path+'split/val/',target_size=(224,224),color_mode='rgb', classes=None,class_mode='categorical', batch_size=batch_size)\n",
+        "\n",
+        "      return (train,validation)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zwbGWMFa0mzL"
+      },
+      "source": [
+        "# A function which calls the network function , this function makes ready the train_data and validation data and call the networks function\n",
+        "def CNN(filter,filter_organisation,drop_out,batch_normalisation,data_augmentation,kernel_size,batch_size,epochs,drop_batch_dense,last_2_avgpool,dense_sz,dp_aft_eachCNN):\n",
+        "\n",
+        "   (train,validation) = ImageProcessing(data_augmentation,batch_size)\n",
+        "   filters = []\n",
+        "   if(filter_organisation == 'same'):\n",
+        "       filters = [filter for i in range(5)]\n",
+        "   if(filter_organisation == 'half'):\n",
+        "       filters = [filter//(2**i) for i in range(5)]\n",
+        "   if(filter_organisation == 'double'):\n",
+        "       filters = [filter*(2**i) for i in range(5)]\n",
+        "\n",
+        "   return network(filters,kernel_size,['relu' for i in range(6)],drop_out,batch_normalisation,dense_sz,train,validation,10,epochs,drop_batch_dense,last_2_avgpool,dp_aft_eachCNN)"
+      ],
+      "execution_count": null,
       "outputs": []
     }
   ]
