Wandb sweep and train function

--- a/Assignment2/partA/Assignment2_partA_final.ipynb
+++ b/Assignment2/partA/Assignment2_partA_final.ipynb
@@ -360,6 +360,136 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sgXcH0wP1Wxq"
+      },
+      "source": [
+        "# A train_function which wandb calls\n",
+        "def train():\n",
+        "  config_default = { \n",
+        "        'filter': 16,\n",
+        "        'filter_organisation': 'double',\n",
+        "        'drop_out':0.2,\n",
+        "        'batch_normalisation': True,\n",
+        "        'data_augmentation': True ,\n",
+        "        'kernel_size': [(3,3),(3,3),(5,5),(7,7),(11,11)],\n",
+        "        'batch_size': 32,\n",
+        "        'epochs':10,\n",
+        "        'drop_batch_dense':'both',\n",
+        "        'last_2_avgpool': True,\n",
+        "        'dp_aft_eachCNN' : False,\n",
+        "  }\n",
+        "  print(\"wand about to be initialised\")\n",
+        "  wandb.init(config=config_default,project='Assignment2')\n",
+        "  config = wandb.config\n",
+        "\n",
+        "  CNN(config.filter,config.filter_organisation,config.drop_out,config.batch_normalisation,config.data_augmentation,config.kernel_size,config.batch_size,config.epochs,config.drop_batch_dense,config.last_2_avgpool,config.dense_sz,config.dp_aft_eachCNN)\n",
+        "  "
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PgAFoENM1b67"
+      },
+      "source": [
+        "#sweep configuration\n",
+        "sweep_config = {\n",
+        "    'name': 'CNN',\n",
+        "    'method' : 'bayes',\n",
+        "    'metric': {        \n",
+        "         'goal': 'maximize',\n",
+        "         'name' : 'val_accuracy'\n",
+        "    },\n",
+        "    'parameters': {\n",
+        "        'filter':{\n",
+        "            'values': [32,64]\n",
+        "        },\n",
+        "        'filter_organisation':{\n",
+        "             'values':['double','same','half']\n",
+        "        },\n",
+        "        'drop_out':{\n",
+        "             'values':[0.2,0.3]\n",
+        "        },\n",
+        "        'batch_normalisation':{\n",
+        "            'values':[True,False]\n",
+        "        },\n",
+        "        'data_augmentation':{\n",
+        "            'values':[True,False]\n",
+        "        },\n",
+        "        'kernel_size':\n",
+        "        {\n",
+        "            'values':[[(3,3),(3,3),(3,3),(3,3),(3,3)],[(3,3),(3,3),(5,5),(7,7),(7,7)],[(11,11),(5,5),(7,7),(3,3),(3,3)]]\n",
+        "        },\n",
+        "        'batch_size':\n",
+        "        {\n",
+        "            'values':[32,64]\n",
+        "        },\n",
+        "        'epochs':\n",
+        "        {\n",
+        "            'values':[25,30]\n",
+        "        },\n",
+        "        'drop_batch_dense':\n",
+        "        {\n",
+        "            'values' : ['both','drop','batch']\n",
+        "        },\n",
+        "        'last_2_avgpool':\n",
+        "        {\n",
+        "            'values':[True,False]\n",
+        "        },\n",
+        "        'dense_sz':\n",
+        "        {\n",
+        "            'values':[128,256,1024]\n",
+        "        },\n",
+        "        'dp_aft_eachCNN':\n",
+        "        {\n",
+        "            'values' : [True,False]\n",
+        "        }\n",
+        "    }\n",
+        "}"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PxhaIEmT1gTm"
+      },
+      "source": [
+        "#sweep_id = wandb.sweep(sweep_config,entity=\"shivaram_22\",project=\"Assignment2\")"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OjIUnoPe1iwr"
+      },
+      "source": [
+        "#wandb.agent(sweep_id,project=\"Assignment2\",function=train)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mrSkweL71jzq"
+      },
+      "source": [
+        "#CNN(config.filter,config.filter_organisation,config.drop_out,config.batch_normalisation,config.data_augmentation,config.kernel_size,config.batch_size,config.epochs,config.drop_batch_dense,config.last_2_avgpool,config.dense_sz,config.dp_aft_eachCNN)  \n",
+        "#collecting the model of the best hyperparameter configuration\n",
+        "model = CNN(32,'double',0.2,True,True,[(3,3),(3,3),(5,5),(7,7),(7,7)],64,25,'both',True,1024,False"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
