testing the best model with test data and saving the model

--- a/Assignment2/partA/Assignment2_partA_final.ipynb
+++ b/Assignment2/partA/Assignment2_partA_final.ipynb
@@ -490,6 +490,67 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EjaI9Xk-2LRQ"
+      },
+      "source": [
+        "#applying the model on test data\n",
+        "datagen = preprocessing.image.ImageDataGenerator()\n",
+        "print(path+'val/')\n",
+        "test = validation = datagen.flow_from_directory(path+'val/',target_size=(224,224),color_mode='rgb', classes=None,class_mode='categorical')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "U7ymsC7h2QfT"
+      },
+      "source": [
+        "m = model.evaluate(test,return_dict=True)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tVH_MQj02Th6"
+      },
+      "source": [
+        "!pip install h5py\n",
+        "#Saving the best model as json and h5 files\n",
+        "from keras.models import model_from_json\n",
+        "from tensorflow.keras import *\n",
+        "model_path = '/content/drive/MyDrive/Assignment2/'\n",
+        "# reffered this for saving and loading the model 'https://machinelearningmastery.com/save-load-keras-deep-learning-models/'\n",
+        "\n",
+        "# model_json = model.to_json()\n",
+        "# with open(model_path+\"model.json\", \"w\") as json_file:\n",
+        "#     json_file.write(model_json)\n",
+        "\n",
+        "# model.save_weights(model_path+\"model.h5\")\n",
+        "# print(\"Saved model to disk\")\n",
+        "\n",
+        "#Loading the model from disk\n",
+        "json_file = open(model_path+'model.json', 'r')\n",
+        "loaded_model_json = json_file.read()\n",
+        "json_file.close()\n",
+        "loaded_model = model_from_json(loaded_model_json)\n",
+        "# load weights into new model\n",
+        "loaded_model.load_weights(model_path+\"model.h5\")\n",
+        "print(\"Loaded model from disk\")\n",
+        "loaded_model.summary()\n",
+        "#recompiling the loaded model\n",
+        "loaded_model.compile(optimizer='adam',loss=losses.CategoricalCrossentropy(),metrics=['accuracy'])\n",
+        "model = loaded_model"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
