--- a/Assignment2/partA/Assignment2_partA_final.ipynb
+++ b/Assignment2/partA/Assignment2_partA_final.ipynb
@@ -551,6 +551,104 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "o-npAEg93jMJ"
+      },
+      "source": [
+        "from tensorflow.keras.preprocessing import image\n",
+        "from tensorflow.keras.applications.resnet import preprocess_input\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "import tensorflow as tf\n",
+        "import tensorflow.keras.backend as K"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cN8VtBeh3luk"
+      },
+      "source": [
+        "img_path = \"/content/drive/MyDrive/Assignment2/inaturalist_12K/val/Amphibia/06369a70c92e4c9ae1ece6f2ba889a6c.jpg\"\n",
+        "input_img = image.load_img(img_path,target_size=(224,224))\n",
+        "plt.imshow(input_img)\n",
+        "plt.axis(\"off\");\n",
+        "#wandb.log({'Input_Image':[wandb.Image(input_img,caption='sample_image')]})\n",
+        "input_img = image.img_to_array(input_img)\n",
+        "input_img = preprocess_input(np.expand_dims(input_img, axis=0))\n",
+        "\n",
+        "#helper function to normalise input tensor with mean 0 , variance 0.25 and converting it into rgb\n",
+        "def g(x):\n",
+        "   x = (x-x.mean())\n",
+        "   x = x/(x.std()+K.epsilon())\n",
+        "   x = x*(0.25)\n",
+        "   x = np.clip(x+0.5,0,1)*255\n",
+        "   x = np.clip(x,0,255).astype('uint8')\n",
+        "   return x"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "INEgTIHU3n-y"
+      },
+      "source": [
+        "##code for guided backpropoagation\n",
+        "import random\n",
+        "#referred to this 'https://stackoverflow.com/questions/55924331/how-to-apply-guided-backprop-in-tensorflow-2-0' to understand the details in implementing guided back_prop in tensorflow.\n",
+        "@tf.custom_gradient\n",
+        "def guidedRelu(x):\n",
+        "  def grad(dy):\n",
+        "    return tf.cast(dy>0,\"float32\") * tf.cast(x>0, \"float32\") * dy\n",
+        "  return tf.nn.relu(x), grad\n",
+        "\n",
+        "images = []\n",
+        "labels = []\n",
+        "\n",
+        "for ii in range(10):\n",
+        "    x = random.randint(0,512*9)\n",
+        "    i = x//(512*3)\n",
+        "    x -= i*(512*3)\n",
+        "    j = x//(512)\n",
+        "    x -= j*(512)\n",
+        "    k = x\n",
+        "    mask = np.zeros(shape=(1,3,3,512))\n",
+        "    mask[0][i][j][k] = 1\n",
+        "    #print(i,j,k)\n",
+        "    model = loaded_model\n",
+        "    gb_model = Model(\n",
+        "        inputs = [model.inputs],\n",
+        "        outputs = [model.get_layer(\"conv2d_4\").output]\n",
+        "    )\n",
+        "\n",
+        "    layer_dict = [layer for layer in gb_model.layers[1:] if hasattr(layer,'activation')]\n",
+        "    for layer in layer_dict:\n",
+        "        if layer.activation == tf.keras.activations.relu:\n",
+        "            layer.activation = guidedRelu\n",
+        "    \n",
+        "    with tf.GradientTape() as tape:\n",
+        "      inputs = tf.cast(input_img, tf.float32)\n",
+        "      tape.watch(inputs)\n",
+        "      outputs = gb_model(inputs)*mask\n",
+        "\n",
+        "    grads = tape.gradient(outputs,inputs)[0]\n",
+        "    labels.append('neuron: ('+str(i)+','+str(j)+','+str(k)+')')\n",
+        "    images.append(np.flip(g(np.array(grads)),-1))\n",
+        "\n",
+        "print(len(images))\n",
+        "# !wandb login \n",
+        "# wandb.init(project=\"Assignment2\", entity=\"shivaram_22\")\n",
+        "# wandb.log({\"Guided backpropoagation on randomly choosen 10 neurons from conv5 layer\": [wandb.Image(image,caption=label) for image,label in zip(images,labels)]})"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
