--- a/Assignment2/partA/Assignment2_partA_final.ipynb
+++ b/Assignment2/partA/Assignment2_partA_final.ipynb
@@ -649,6 +649,79 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "K_bjCdnj4MJ2",
+        "outputId": "e2123ed5-afad-430b-a692-b35b41371881",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 226
+        }
+      },
+      "source": [
+        "#code for filter visualisation: \n",
+        "v_model = Model(inputs = [model.inputs],outputs = [model.get_layer(\"conv2d\").output])\n",
+        "inputs = tf.cast(input_img, tf.float32)\n",
+        "outputs = v_model(inputs)"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-8d7eb20d70c2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#code for filter visualisation:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mv_model\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mModel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minputs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0moutputs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_layer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"conv2d\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moutput\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0minputs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcast\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput_img\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfloat32\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0moutputs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mv_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'Model' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Nq2Mi70K4Rgt"
+      },
+      "source": [
+        "f_out = outputs[0].numpy()\n",
+        "images = []\n",
+        "labels = []\n",
+        "for i in range(32):\n",
+        "  f = f_out[:,:,i]\n",
+        "  f = (f-f.min())/(f.max()-f.min())\n",
+        "  images.append(f)\n",
+        "  labels.append('filter: '+str(i))\n",
+        "\n",
+        "wandb.log({\"Filter Visualisation\": [wandb.Image(image,caption=label) for image,label in zip(images,labels)]})"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yDI1ujFj4ZNM"
+      },
+      "source": [
+        "#output of weights of 32 filters in conv2d\n",
+        "filters,biases = model.get_layer('conv2d').get_weights()\n",
+        "filters = (filters-filters.min())/(filters.max()-filters.min())\n",
+        "images = []\n",
+        "labels = []\n",
+        "for i in range(32):\n",
+        "    #print('filter_num: ',i)\n",
+        "    f = filters[:,:,:,i]\n",
+        "    images.append(f)\n",
+        "    labels.append('filter: '+str(i))\n",
+        "\n",
+        "wandb.log({\"Filter weights Visualisation\": [wandb.Image(image,caption=label) for image,label in zip(images,labels)]})"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
